tests/fixtures/fail/inherent_trait_extension_pending.sc
let A = struct(value: i32)

extend A: Foo {
  let answer = 42
}

let main(): i32 = { 0 }
